# ValuraAssignment

./: .gitignore  README.md  WALKTHROUGH.md  requirements.txt
src/: intent_classifier.py
src/chat_agent/: .env.example  .gitignore  chat_agent.py  pyproject.toml
src/portfolio_check/: pyproject.toml
src/portfolio_check copy/portfolio_check/: __init__.py  agent.py
src/portfolio_check/portfolio_check/: __main__.py  local_yfinance.py  mcp_client.py  metrics.py  users.json
src/safety/: build_dataset_bert.py  eval_bert.py  export_onnx.py  inference.py  train_and_export.py  train_bert.py
src/safety/bert_ckpt/checkpoint-574/: config.json  scheduler.pt  trainer_state.json
src/safety/data_bert/: labels.json  test.jsonl  train.jsonl  val.jsonl
